Fixed russial locale a little.

--- a/lib/generators/templates/locales/ru.yml
+++ b/lib/generators/templates/locales/ru.yml
@@ -1,43 +1,43 @@
 ru:
   humanizer:
     validation:
-      error: Вы робот
+      error: заполнено неправильно
     questions:
       - question: Два плюс два?
-        answers: ["4", "четыре"]
+        answers: ["4", "четыре", "Четыре"]
       - question: В лесу родилась...
-        answer: елочка
+        answer: ["елочка", "Елочка", "ёлочка", "Ёлочка"]
       - question: Какое число идет до девяти?
         answers: ["8", "восемь"]
       - question: Пять раз по два?
-        answers: ["10", "десять"]
+        answers: ["10", "десять", "Десять"]
       - question: "Продолжите последовательность: 10, 11, 12, 13, 14, .."
-        answers: ["15", "пятьнадцать"]
+        answers: ["15", "пятьнадцать", "Пятьнадцать"]
       - question: "Пять раз по пять?"
-        answers: ["25", "двадцать пять"]
+        answers: ["25", "двадцать пять", "Двадцать пять"]
       - question: "Десять делить на два?"
-        answers: ["5", "пять"]
+        answers: ["5", "пять", "Пять"]
       - question: Какой день идет после понедельника?
-        answer: "вторник"
+        answer: ["вторник", "Вторник"]
       - question: Какой последний месяц в году?
-        answer: "декабрь"
+        answer: ["декабрь", "Декабрь"]
       - question: Сколько минут в одном часе?
-        answers: ["60", "шестьдесят"]
+        answers: ["60", "шестьдесят", "Шестьдесят"]
       - question: Слово обратное слову Вниз?
-        answer: "вверх"
+        answer: ["вверх", "Вверх"]
       - question: Слово обратное слову Север?
-        answer: "юг"
+        answer: ["юг", "Юг"]
       - question: Слово обратное слову Плохой?
-        answer: "хороший"
+        answer: ["хороший", "Хороший"]
       - question: Четыре раза по четыре?
-        answers: ["16", "шестнадцать"]
+        answers: ["16", "шестнадцать", "Шестнадцать"]
       - question: Какое число идет после 20?
-        answers: ["21", "двадцать один"]
+        answers: ["21", "двадцать один", "Двадцать один"]
       - question: Месяц идущий перед Июлем?
-        answer: "июнь"
+        answer: ["июнь", "Июнь"]
       - question: Пятнадцать делить на три?
         answer: ["пять", "5"]
       - question: 14 минус 4?
         answers: ["10", "десять"]
       - question: "Продолжите. Понедельник, Вторник, Среда.."
-        answer: "четверг"
+        answer: ["четверг", "Четверг"]
